--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,4 +1,38 @@
-name: Deploy Frontend
+# name: Deploy Frontend
+# on:
+#   push:
+#     branches:
+#       - main
+
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout source code
+#         uses: actions/checkout@v3
+#       - name: Login to Docker
+#         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+#       - name: Build Docker Container
+#         run: docker build -t astrotify/react-test -f Dockerfile.dev .
+#       - name: Run test for Docker Container
+#         run: docker run -e CI=true astrotify/react-test npm test
+
+#       - name: Generate deployment package
+#         run: zip -r deploy.zip . -x '*.git*'
+
+#       - name: Deploy to EB
+#         uses: einaregilsson/beanstalk-deploy@v22
+#         with:
+#           aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#           application_name: docker-react-app
+#           environment_name: Docker-react-app-env
+#           existing_bucket_name: elasticbeanstalk-ap-southeast-2-339712796583
+#           region: ap-southeast-2
+#           version_label: ${{ github.sha }}
+#           deployment_package: deploy.zip
+
+name: Deploy
 on:
   push:
     branches:
@@ -12,22 +46,17 @@ jobs:
         uses: actions/checkout@v3
       - name: Login to Docker
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-      - name: Build Docker Container
-        run: docker build -t astrotify/react-test -f Dockerfile.dev .
+      - name: Build Docker Test Container  
+        run: docker build -t astrotify/react-test -f ./client/Dockerfile.dev .
       - name: Run test for Docker Container
         run: docker run -e CI=true astrotify/react-test npm test
 
-      - name: Generate deployment package
-        run: zip -r deploy.zip . -x '*.git*'
+      - name: Build Docker Production Container
+        run: docker build -t astrotify/multi-client ./client
+      - name: Build Docker Production Nginx Container
+        run: docker build -t astrotify/multi-nginx ./nginx
+      - name: Build Docker Production Server Container
+        run: docker build -t astrotify/multi-server ./server
+      - name: Build Docker Production Worker Container
+        run: docker build -t astrotify/multi-worker ./worker
 
-      - name: Deploy to EB
-        uses: einaregilsson/beanstalk-deploy@v22
-        with:
-          aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          application_name: docker-react-app
-          environment_name: Docker-react-app-env
-          existing_bucket_name: elasticbeanstalk-ap-southeast-2-339712796583
-          region: ap-southeast-2
-          version_label: ${{ github.sha }}
-          deployment_package: deploy.zip
