--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -47,7 +47,7 @@ jobs:
       - name: Login to Docker
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
       - name: Build Docker Test Container  
-        run: docker build -t astrotify/react-test -f ./client/Dockerfile.dev .
+        run: docker build -t astrotify/react-test -f ./client/Dockerfile.dev ./client
       - name: Run test for Docker Container
         run: docker run -e CI=true astrotify/react-test npm test
 
