--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -60,3 +60,9 @@ jobs:
       - name: Build Docker Production Worker Container
         run: docker build -t astrotify/multi-worker ./worker
 
+      - name: Push Docker Production Containers to Docker Hub
+        run: docker push astrotify/multi-client
+        run: docker push astrotify/multi-nginx
+        run: docker push astrotify/multi-server
+        run: docker push astrotify/multi-worker
+
